# LearnOpenGLApp

./: .gitattributes  .gitignore  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: vertex.glsl
src/: macros.h  main.cpp
src/shader/: Shader.cpp  Shader.h
